--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -5,13 +5,12 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    7540 Wheeler Rd<br />
+    Whitmore Lake, MI 48189<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    734.904.5675
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Email:</strong>   <a href="rd484215@ohio.edu">rd484215@ohio.edu</a><br />
 </address>
