--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,30 +2,36 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="jumbotron" style="background-color: gainsboro">
+    <h1>MIS 4800</h1>
+    <p class="lead">MIS 4200 is a class focused on building development techniques, primarily through the use of Microsoft SQL and HTML.</p>
+    <p><a href="https://catalogs.ohio.edu/preview_course_nopop.php?catoid=42&coid=191859" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
+    <div class="col-md-4" style="background-color: gainsboro">
+        <h2 style="color:darkslategray">MIS Degree</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Management Information Systems is a degree within the College of Business.
+            It focuses on developing skills of coding, analysis, application and communication.
+            It is a six course degree that allows students to learn the skills and apply them in real life situations.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" style="background-color: whitesmoke" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    <div class="col-md-4" style="background-color: gainsboro">
+        <h2 style="color:darkslategray">Get Involved</h2>
+        <p>
+            The Ohio University club dedecated to MIS and Analysics majors is called Information Systems and Analytics Professionals, ISAP.
+            This organization allows members to learn more about their field and helps them find job placement after graduation.
+        </p>
+        <p><a class="btn btn-default" style="background-color: whitesmoke" href="https://ouisap.com">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="col-md-4" style="background-color: gainsboro">
+        <h2 style="color:darkslategray">Job Opportunities</h2>
+        <p>
+            There are many different professions available for individuals majoring in MIS and Analytics.
+            These jobs include business analysts, software developers, and consultants.
+        </p>
+        <p><a class="btn btn-default" style="background-color: whitesmoke" href="https://www.bestmastersdegrees.com/lists/5-great-mis-careers">Learn more &raquo;</a></p>
     </div>
 </div>
