--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -34,4 +34,13 @@
         </p>
         <p><a class="btn btn-default" style="background-color: whitesmoke" href="https://www.bestmastersdegrees.com/lists/5-great-mis-careers">Learn more &raquo;</a></p>
     </div>
+    <div class="col-md-4" style="background-color: gainsboro">
+        <h2 style="color:darkslategray">Links to MVC</h2>
+        <p>
+            SD2: <br />
+            @Html.ActionLink("Pets", "Index", "Pets")<br />
+            @Html.ActionLink("Vet", "Index", "Vets")
+        </p>
+        <p><a class="btn btn-default" style="background-color: whitesmoke" href="https://www.bestmastersdegrees.com/lists/5-great-mis-careers">Learn more &raquo;</a></p>
+    </div>
 </div>
