--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -38,8 +38,9 @@
         <h2 style="color:darkslategray">Links to MVC</h2>
         <p>
             SD2: <br />
-            @Html.ActionLink("Pets", "Index", "Pets")<br />
-            @Html.ActionLink("Vet", "Index", "Vets")
+            @Html.ActionLink("Petts", "Index", "Petts")<br />
+            @Html.ActionLink("Vett", "Index", "Vetts")<br />
+            @Html.ActionLink("Appointment", "Index", "Appointments")
         </p>
         <p><a class="btn btn-default" style="background-color: whitesmoke" href="https://www.bestmastersdegrees.com/lists/5-great-mis-careers">Learn more &raquo;</a></p>
     </div>
