--- a/Views/Petts/Delete.cshtml
+++ b/Views/Petts/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model mis42p2rd484215.Models.Vet
+﻿@model mis42p2rd484215.Models.Petts
 
 @{
     ViewBag.Title = "Delete";
@@ -8,23 +8,39 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Vet</h4>
+    <h4>Petts</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.vetLastName)
+            @Html.DisplayNameFor(model => model.petName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.vetLastName)
+            @Html.DisplayFor(model => model.petName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.vetFirstName)
+            @Html.DisplayNameFor(model => model.petType)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.vetFirstName)
+            @Html.DisplayFor(model => model.petType)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ownerLastName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ownerLastName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ownerFirstName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ownerFirstName)
         </dd>
 
         <dt>
@@ -41,6 +57,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.phone)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.patientSince)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.patientSince)
         </dd>
 
     </dl>
