--- a/Views/VetPets/Delete.cshtml
+++ b/Views/VetPets/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model mis42p2rd484215.Models.Vet
+﻿@model mis42p2rd484215.Models.VetPets
 
 @{
     ViewBag.Title = "Delete";
@@ -8,39 +8,39 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Vet</h4>
+    <h4>VetPets</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.vetLastName)
+            @Html.DisplayNameFor(model => model.Pet.petName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.vetLastName)
+            @Html.DisplayFor(model => model.Pet.petName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.vetFirstName)
+            @Html.DisplayNameFor(model => model.Vet.vetLastName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.vetFirstName)
+            @Html.DisplayFor(model => model.Vet.vetLastName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.email)
+            @Html.DisplayNameFor(model => model.appointmentDate)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.email)
+            @Html.DisplayFor(model => model.appointmentDate)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.phone)
+            @Html.DisplayNameFor(model => model.price)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.phone)
+            @Html.DisplayFor(model => model.price)
         </dd>
 
     </dl>
