--- a/Views/Vetts/Create.cshtml
+++ b/Views/Vetts/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model mis42p2rd484215.Models.Vet
+﻿@model mis42p2rd484215.Models.Vett
 
 @{
     ViewBag.Title = "Create";
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Vet</h4>
+        <h4>Vett</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
