--- a/Views/Vetts/Delete.cshtml
+++ b/Views/Vetts/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model mis42p2rd484215.Models.Vet
+﻿@model mis42p2rd484215.Models.Vett
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Vet</h4>
+    <h4>Vett</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
