--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,13 +17,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("MIS 4200", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("MIS 4200", "Index", "Home", "Pet", "Vet", "Appointment", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Petts", "Index", "Petts")</li>
+                    <li>@Html.ActionLink("Vett", "Index", "Vetts")</li>
+                    <li>@Html.ActionLink("Appointment", "Index", "Appointments")</li>
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
