--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>All About Me</h2>
+<h3></h3>
 
 <p>My name is Riley Doll, and I currently am a senior in the College of Business at Ohio University.  My majors are Management Information Systems (MIS) and Analytics.  After graduating in the spring, I plan on getting my Masters in Information, and later working in a UX position.</p>
