--- a/Views/Vetts/Index.cshtml
+++ b/Views/Vetts/Index.cshtml
@@ -4,12 +4,12 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Vets</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+<table class="table table-hover table-dark">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.vetLastName)
