--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron" style="background-color: gainsboro">
     <h1>MIS 4800</h1>
     <p class="lead">MIS 4200 is a class focused on building development techniques, primarily through the use of Microsoft SQL and HTML.</p>
-    <p><a href="https://catalogs.ohio.edu/preview_course_nopop.php?catoid=42&coid=191859" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p><a href="https://catalogs.ohio.edu/preview_course_nopop.php?catoid=42&coid=191859" class="btn btn-default" style="background-color: whitesmoke">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
@@ -36,7 +36,7 @@
     </div>
     <div class="col-md-4" style="background-color: gainsboro">
         <h2 style="color:darkslategray">Links to MVC</h2>
-        <p>
+        <p >
             SD2: <br />
             @Html.ActionLink("Petts", "Index", "Petts")<br />
             @Html.ActionLink("Vett", "Index", "Vetts")<br />
