--- a/Views/Petts/Index.cshtml
+++ b/Views/Petts/Index.cshtml
@@ -10,8 +10,8 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 <table  class="table table-hover table-dark">
-    <tr>
-        <th>
+    <tr class="well well-lg" >
+        <th >
             @Html.DisplayNameFor(model => model.petName)
         </th>
         <th>
