--- a/Views/Vetts/Index.cshtml
+++ b/Views/Vetts/Index.cshtml
@@ -10,7 +10,7 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table table-hover table-dark">
-    <tr>
+    <tr class="well well-lg" >
         <th>
             @Html.DisplayNameFor(model => model.vetLastName)
         </th>
