Final SD3 Changes

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -5,3 +5,14 @@
 <h3></h3>
 
 <p>My name is Riley Doll, and I currently am a senior in the College of Business at Ohio University.  My majors are Management Information Systems (MIS) and Analytics.  After graduating in the spring, I plan on getting my Masters in Information, and later working in a UX position.</p>
+<address>
+    <p>
+        Learn More About UX:
+        <a href="https://www.nngroup.com/articles/definition-user-experience/" class="btn btn-default btn-lg" style="color: darkseagreen">
+            <span class="glyphicon glyphicon-circle-arrow-right"></span>
+        </a>
+
+   
+
+    </p>
+</address>
