--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -14,3 +14,14 @@
 <address>
     <strong>Email:</strong>   <a href="rd484215@ohio.edu">rd484215@ohio.edu</a><br />
 </address>
+
+<address>
+    <p>
+        Go to My LinkedIn:
+        
+            <a href="https://www.linkedin.com/in/rileydoll/" class="btn btn-default btn-lg" style="color: darkseagreen">
+                <span class="glyphicon glyphicon-share-alt"></span>
+            </a>
+       
+    </p>
+</address>
