--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron" style="background-color: gainsboro">
     <h1>MIS 4800</h1>
     <p class="lead">MIS 4200 is a class focused on building development techniques, primarily through the use of Microsoft SQL and HTML.</p>
-    <p><a href="https://catalogs.ohio.edu/preview_course_nopop.php?catoid=42&coid=191859" class="btn btn-default" style="background-color: whitesmoke">Learn more &raquo;</a></p>
+    <p><a href="https://catalogs.ohio.edu/preview_course_nopop.php?catoid=42&coid=191859"  style="color: darkslategray" class="glyphicon glyphicon-arrow-right btn-lg"></a></p>
 </div>
 
 <div class="row">
@@ -16,7 +16,7 @@
             It focuses on developing skills of coding, analysis, application and communication.
             It is a six course degree that allows students to learn the skills and apply them in real life situations.
         </p>
-        <p><a class="btn btn-default" style="background-color: whitesmoke" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" style="background-color: darkseagreen" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4" style="background-color: gainsboro">
         <h2 style="color:darkslategray">Get Involved</h2>
@@ -24,7 +24,7 @@
             The Ohio University club dedecated to MIS and Analysics majors is called Information Systems and Analytics Professionals, ISAP.
             This organization allows members to learn more about their field and helps them find job placement after graduation.
         </p>
-        <p><a class="btn btn-default" style="background-color: whitesmoke" href="https://ouisap.com">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" style="background-color: darkseagreen" href="https://ouisap.com">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4" style="background-color: gainsboro">
         <h2 style="color:darkslategray">Job Opportunities</h2>
@@ -32,7 +32,7 @@
             There are many different professions available for individuals majoring in MIS and Analytics.
             These jobs include business analysts, software developers, and consultants.
         </p>
-        <p><a class="btn btn-default" style="background-color: whitesmoke" href="https://www.bestmastersdegrees.com/lists/5-great-mis-careers">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" style="background-color: darkseagreen" href="https://www.bestmastersdegrees.com/lists/5-great-mis-careers">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4" style="background-color: gainsboro">
         <h2 style="color:darkslategray">Links to MVC</h2>
@@ -42,6 +42,6 @@
             @Html.ActionLink("Vett", "Index", "Vetts")<br />
             @Html.ActionLink("Appointment", "Index", "Appointments")
         </p>
-        <p><a class="btn btn-default" style="background-color: whitesmoke" href="https://www.bestmastersdegrees.com/lists/5-great-mis-careers">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" style="background-color: darkseagreen" href="https://www.bestmastersdegrees.com/lists/5-great-mis-careers">Learn more &raquo;</a></p>
     </div>
 </div>
